// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert 快照测试 不同类型的警告提示 1`] = `
.c0 {
  position: relative;
  padding: 8px 30px 8px 37px;
  color: rgba(0,0,0,0.65);
  line-height: 1.5;
  border-radius: 4px;
  background-color: #e8f5e9;
  border: 1px solid #c8e6c9;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  box-sizing: border-box;
  word-wrap: break-word;
  margin-bottom: 16px;
}

.c2 {
  display: inline-block;
  font-size: 0.875rem;
  margin-bottom: 4px;
  color: rgba(0,0,0,0.85);
}

.c3 {
  font-size: 0.875rem;
  display: inline-block;
  line-height: 22px;
}

.c1 {
  font-family: 'Material Icons';
  font-weight: normal;
  font-style: normal;
  font-size: 24px;
  max-width: 1em;
  display: inline-block;
  text-transform: none;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  word-wrap: normal;
  white-space: nowrap;
  direction: ltr;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  -moz-osx-font-smoothing: grayscale;
  font-feature-settings: 'liga';
  color: currentColor;
  -webkit-transition: color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  color: #00c853;
  font-size: 16px;
  margin-right: 8px;
  height: 20px;
  position: absolute;
  top: 10px;
  left: 16px;
}

<div
  className="c0"
  type="success"
>
  <span
    className="c1 sinoui-icon"
    color="success"
  >
    <svg
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 1024 1024"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm193.5 301.7l-210.6 292a31.8 31.8 0 0 1-51.7 0L318.5 484.9c-3.8-5.3 0-12.7 6.5-12.7h46.9c10.2 0 19.9 4.9 25.9 13.3l71.2 98.8 157.2-218c6-8.3 15.6-13.3 25.9-13.3H699c6.5 0 10.3 7.4 6.5 12.7z"
      />
    </svg>
  </span>
  <div>
    <span
      className="c2"
      data-testid="span"
    >
      提示信息
    </span>
    <span
      className="c3"
    />
  </div>
</div>
`;

exports[`Alert 快照测试 渲染Alert 1`] = `
.c0 {
  position: relative;
  padding: 8px 30px 8px 15px;
  color: rgba(0,0,0,0.65);
  line-height: 1.5;
  border-radius: 4px;
  background-color: #e0f7fa;
  border: 1px solid #b2ebf2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  box-sizing: border-box;
  word-wrap: break-word;
  margin-bottom: 16px;
}

.c1 {
  display: inline-block;
  font-size: 0.875rem;
  margin-bottom: 4px;
  color: rgba(0,0,0,0.85);
}

.c2 {
  font-size: 0.875rem;
  display: inline-block;
  line-height: 22px;
}

<div
  className="c0"
  type="info"
>
  <div>
    <span
      className="c1"
      data-testid="span"
    >
      提示信息
    </span>
    <span
      className="c2"
    />
  </div>
</div>
`;

exports[`Alert 快照测试 设置显示关闭按钮 1`] = `
.c0 {
  position: relative;
  padding: 8px 30px 8px 15px;
  color: rgba(0,0,0,0.65);
  line-height: 1.5;
  border-radius: 4px;
  background-color: #e0f7fa;
  border: 1px solid #b2ebf2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  box-sizing: border-box;
  word-wrap: break-word;
  margin-bottom: 16px;
}

.c2 {
  display: inline-block;
  font-size: 0.875rem;
  margin-bottom: 4px;
  color: rgba(0,0,0,0.85);
}

.c3 {
  font-size: 0.875rem;
  display: inline-block;
  line-height: 22px;
}

.c1 {
  position: absolute;
  top: 10px;
  right: 16px;
  overflow: hidden;
  font-size: 16px;
  line-height: 22px;
  border: 0;
  cursor: pointer;
  background-color: transparent;
  outline: none;
  color: rgba(0,0,0,0.75);
}

<div
  className="c0"
  type="info"
>
  <button
    className="c1"
    data-testid="button"
    onClick={[Function]}
    tabIndex={0}
    type="button"
  >
    <svg
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 1024 1024"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 0 0 203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
      />
    </svg>
  </button>
  <div>
    <span
      className="c2"
      data-testid="span"
    >
      提示信息
    </span>
    <span
      className="c3"
    />
  </div>
</div>
`;

exports[`Alert 快照测试 设置显示辅助图标 1`] = `
.c0 {
  position: relative;
  padding: 8px 30px 8px 37px;
  color: rgba(0,0,0,0.65);
  line-height: 1.5;
  border-radius: 4px;
  background-color: #e0f7fa;
  border: 1px solid #b2ebf2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  box-sizing: border-box;
  word-wrap: break-word;
  margin-bottom: 16px;
}

.c2 {
  display: inline-block;
  font-size: 0.875rem;
  margin-bottom: 4px;
  color: rgba(0,0,0,0.85);
}

.c3 {
  font-size: 0.875rem;
  display: inline-block;
  line-height: 22px;
}

.c1 {
  font-family: 'Material Icons';
  font-weight: normal;
  font-style: normal;
  font-size: 24px;
  max-width: 1em;
  display: inline-block;
  text-transform: none;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  word-wrap: normal;
  white-space: nowrap;
  direction: ltr;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  -moz-osx-font-smoothing: grayscale;
  font-feature-settings: 'liga';
  color: currentColor;
  -webkit-transition: color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  color: #00bcd4;
  font-size: 16px;
  margin-right: 8px;
  height: 20px;
  position: absolute;
  top: 10px;
  left: 16px;
}

<div
  className="c0"
  type="info"
>
  <span
    className="c1 sinoui-icon"
    color="info"
  >
    <svg
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 1024 1024"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm32 664c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V456c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272zm-32-344a48.01 48.01 0 0 1 0-96 48.01 48.01 0 0 1 0 96z"
      />
    </svg>
  </span>
  <div>
    <span
      className="c2"
      data-testid="span"
    >
      提示信息
    </span>
    <span
      className="c3"
    />
  </div>
</div>
`;

exports[`Alert 快照测试 设置显示辅助图标 2`] = `
.c0 {
  position: relative;
  padding: 15px 30px 15px 64px;
  color: rgba(0,0,0,0.65);
  line-height: 1.5;
  border-radius: 4px;
  background-color: #e0f7fa;
  border: 1px solid #b2ebf2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  box-sizing: border-box;
  word-wrap: break-word;
  margin-bottom: 16px;
}

.c2 {
  display: block;
  font-size: 1rem;
  margin-bottom: 4px;
  color: rgba(0,0,0,0.85);
}

.c3 {
  font-size: 0.875rem;
  display: block;
  line-height: 22px;
}

.c1 {
  font-family: 'Material Icons';
  font-weight: normal;
  font-style: normal;
  font-size: 24px;
  max-width: 1em;
  display: inline-block;
  text-transform: none;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  word-wrap: normal;
  white-space: nowrap;
  direction: ltr;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  -moz-osx-font-smoothing: grayscale;
  font-feature-settings: 'liga';
  color: currentColor;
  -webkit-transition: color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  color: #00bcd4;
  font-size: 24px;
  margin-right: 8px;
  height: 20px;
  position: absolute;
  top: 14px;
  left: 24px;
}

<div
  className="c0"
  type="info"
>
  <span
    className="c1 sinoui-icon"
    color="info"
  >
    <svg
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 1024 1024"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
      />
      <path
        d="M464 336a48 48 0 1 0 96 0 48 48 0 1 0-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
      />
    </svg>
  </span>
  <div>
    <span
      className="c2"
      data-testid="span"
    >
      提示信息
    </span>
    <span
      className="c3"
    >
      辅助性文字介绍
    </span>
  </div>
</div>
`;

exports[`Alert 快照测试 设置辅助性文字介绍 1`] = `
.c0 {
  position: relative;
  padding: 15px 30px 15px 64px;
  color: rgba(0,0,0,0.65);
  line-height: 1.5;
  border-radius: 4px;
  background-color: #e0f7fa;
  border: 1px solid #b2ebf2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  box-sizing: border-box;
  word-wrap: break-word;
  margin-bottom: 16px;
}

.c2 {
  display: block;
  font-size: 1rem;
  margin-bottom: 4px;
  color: rgba(0,0,0,0.85);
}

.c3 {
  font-size: 0.875rem;
  display: block;
  line-height: 22px;
}

.c1 {
  font-family: 'Material Icons';
  font-weight: normal;
  font-style: normal;
  font-size: 24px;
  max-width: 1em;
  display: inline-block;
  text-transform: none;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  word-wrap: normal;
  white-space: nowrap;
  direction: ltr;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  -moz-osx-font-smoothing: grayscale;
  font-feature-settings: 'liga';
  color: currentColor;
  -webkit-transition: color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  color: #00bcd4;
  font-size: 24px;
  margin-right: 8px;
  height: 20px;
  position: absolute;
  top: 14px;
  left: 24px;
}

<div
  className="c0"
  type="info"
>
  <span
    className="c1 sinoui-icon"
    color="info"
  >
    <svg
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 1024 1024"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
      />
      <path
        d="M464 336a48 48 0 1 0 96 0 48 48 0 1 0-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
      />
    </svg>
  </span>
  <div>
    <span
      className="c2"
      data-testid="span"
    >
      提示信息
    </span>
    <span
      className="c3"
    >
      辅助性文字介绍
    </span>
  </div>
</div>
`;
